Select a year to grab a configuration from for a driver

--- a/SimTECH/SimTECH/Pages/Entrants/Drivers/HumanBeingGenerator/Index.razor
+++ b/SimTECH/SimTECH/Pages/Entrants/Drivers/HumanBeingGenerator/Index.razor
@@ -52,11 +52,11 @@
                                                SearchFunc="SearchLanguages"
                                                >
                                 <ItemTemplate>
-                                    <MudCheckBox Checked="@context.IsSelected" Color="Color.Secondary" />
+                                    <MudCheckBox Value="@context.IsSelected" Color="Color.Secondary" />
                                     <CountryNamedFlag Code="@context.Value.Country" Justify="Justify.FlexStart" Size="ElementSize.Normal" />
                                 </ItemTemplate>
                                 <ItemSelectedTemplate>
-                                    <MudCheckBox Checked="@context.IsSelected" Color="Color.Secondary" />
+                                    <MudCheckBox Value="@context.IsSelected" Color="Color.Secondary" />
                                     <CountryNamedFlag Code="@context.Value.Country" Justify="Justify.FlexStart" Size="ElementSize.Normal" />
                                 </ItemSelectedTemplate>
                             </MudSelectExtended>
