--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -34,10 +34,12 @@
 }
 
 /*
-    common
+    root
+    shared
     colours
-    buttons
+    controls
     text
+    inputs
     tables
     dialogs
     graphics
@@ -46,7 +48,213 @@
     special
 */
 
-/* common */
+/* root */
+:root {
+    --mud-palette-white: initial;
+    --mud-palette-black: initial;
+    --mud-palette-primary: initial;
+    --mud-palette-primary-rgb: initial;
+    --mud-palette-primary-text: initial;
+    --mud-palette-primary-darken: initial;
+    --mud-palette-primary-lighten: initial;
+    --mud-palette-primary-hover: initial;
+    --mud-palette-secondary: initial;
+    --mud-palette-secondary-rgb: initial;
+    --mud-palette-secondary-text: initial;
+    --mud-palette-secondary-darken: initial;
+    --mud-palette-secondary-lighten: initial;
+    --mud-palette-secondary-hover: initial;
+    --mud-palette-tertiary: initial;
+    --mud-palette-tertiary-rgb: initial;
+    --mud-palette-tertiary-text: initial;
+    --mud-palette-tertiary-darken: initial;
+    --mud-palette-tertiary-lighten: initial;
+    --mud-palette-tertiary-hover: initial;
+    --mud-palette-info: initial;
+    --mud-palette-info-rgb: initial;
+    --mud-palette-info-text: initial;
+    --mud-palette-info-darken: initial;
+    --mud-palette-info-lighten: initial;
+    --mud-palette-info-hover: initial;
+    --mud-palette-success: initial;
+    --mud-palette-success-rgb: initial;
+    --mud-palette-success-text: initial;
+    --mud-palette-success-darken: initial;
+    --mud-palette-success-lighten: initial;
+    --mud-palette-success-hover: initial;
+    --mud-palette-warning: initial;
+    --mud-palette-warning-rgb: initial;
+    --mud-palette-warning-text: initial;
+    --mud-palette-warning-darken: initial;
+    --mud-palette-warning-lighten: initial;
+    --mud-palette-warning-hover: initial;
+    --mud-palette-error: initial;
+    --mud-palette-error-rgb: initial;
+    --mud-palette-error-text: initial;
+    --mud-palette-error-darken: initial;
+    --mud-palette-error-lighten: initial;
+    --mud-palette-error-hover: initial;
+    --mud-palette-dark: initial;
+    --mud-palette-dark-rgb: initial;
+    --mud-palette-dark-text: initial;
+    --mud-palette-dark-darken: initial;
+    --mud-palette-dark-lighten: initial;
+    --mud-palette-dark-hover: initial;
+    --mud-palette-text-primary: initial;
+    --mud-palette-text-secondary: initial;
+    --mud-palette-text-disabled: initial;
+    --mud-palette-action-default: initial;
+    --mud-palette-action-default-hover: initial;
+    --mud-palette-action-disabled: initial;
+    --mud-palette-action-disabled-background: initial;
+    --mud-palette-surface: initial;
+    --mud-palette-background: initial;
+    --mud-palette-background-grey: initial;
+    --mud-palette-drawer-background: initial;
+    --mud-palette-drawer-text: initial;
+    --mud-palette-drawer-icon: initial;
+    --mud-palette-appbar-background: initial;
+    --mud-palette-appbar-text: initial;
+    --mud-palette-lines-default: initial;
+    --mud-palette-lines-inputs: initial;
+    --mud-palette-table-lines: initial;
+    --mud-palette-table-striped: initial;
+    --mud-palette-table-hover: initial;
+    --mud-palette-divider: initial;
+    --mud-palette-divider-light: initial;
+    --mud-palette-chip-default: initial;
+    --mud-palette-chip-default-hover: initial;
+    --mud-palette-grey-default: initial;
+    --mud-palette-grey-light: initial;
+    --mud-palette-grey-lighter: initial;
+    --mud-palette-grey-dark: initial;
+    --mud-palette-grey-darker: initial;
+    --mud-palette-overlay-dark: initial;
+    --mud-palette-overlay-light: initial;
+    --mud-elevation-0: initial;
+    --mud-elevation-1: initial;
+    --mud-elevation-2: initial;
+    --mud-elevation-3: initial;
+    --mud-elevation-4: initial;
+    --mud-elevation-5: initial;
+    --mud-elevation-6: initial;
+    --mud-elevation-7: initial;
+    --mud-elevation-8: initial;
+    --mud-elevation-9: initial;
+    --mud-elevation-10: initial;
+    --mud-elevation-11: initial;
+    --mud-elevation-12: initial;
+    --mud-elevation-13: initial;
+    --mud-elevation-14: initial;
+    --mud-elevation-15: initial;
+    --mud-elevation-16: initial;
+    --mud-elevation-17: initial;
+    --mud-elevation-18: initial;
+    --mud-elevation-19: initial;
+    --mud-elevation-20: initial;
+    --mud-elevation-21: initial;
+    --mud-elevation-22: initial;
+    --mud-elevation-23: initial;
+    --mud-elevation-24: initial;
+    --mud-elevation-25: initial;
+    --mud-default-borderradius: initial;
+    --mud-drawer-width-left: initial;
+    --mud-drawer-width-right: initial;
+    --mud-drawer-width-mini-left: initial;
+    --mud-drawer-width-mini-right: initial;
+    --mud-appbar-height: initial;
+    --mud-typography-default-family: initial;
+    --mud-typography-default-size: initial;
+    --mud-typography-default-weight: initial;
+    --mud-typography-default-lineheight: initial;
+    --mud-typography-default-letterspacing: initial;
+    --mud-typography-default-text-transform: initial;
+    --mud-typography-h1-family: initial;
+    --mud-typography-h1-size: initial;
+    --mud-typography-h1-weight: initial;
+    --mud-typography-h1-lineheight: initial;
+    --mud-typography-h1-letterspacing: initial;
+    --mud-typography-h1-text-transform: initial;
+    --mud-typography-h2-family: initial;
+    --mud-typography-h2-size: initial;
+    --mud-typography-h2-weight: initial;
+    --mud-typography-h2-lineheight: initial;
+    --mud-typography-h2-letterspacing: initial;
+    --mud-typography-h2-text-transform: initial;
+    --mud-typography-h3-family: initial;
+    --mud-typography-h3-size: initial;
+    --mud-typography-h3-weight: initial;
+    --mud-typography-h3-lineheight: initial;
+    --mud-typography-h3-letterspacing: initial;
+    --mud-typography-h3-text-transform: initial;
+    --mud-typography-h4-family: initial;
+    --mud-typography-h4-size: initial;
+    --mud-typography-h4-weight: initial;
+    --mud-typography-h4-lineheight: initial;
+    --mud-typography-h4-letterspacing: initial;
+    --mud-typography-h4-text-transform: initial;
+    --mud-typography-h5-family: initial;
+    --mud-typography-h5-size: initial;
+    --mud-typography-h5-weight: initial;
+    --mud-typography-h5-lineheight: initial;
+    --mud-typography-h5-letterspacing: initial;
+    --mud-typography-h5-text-transform: initial;
+    --mud-typography-h6-family: initial;
+    --mud-typography-h6-size: initial;
+    --mud-typography-h6-weight: initial;
+    --mud-typography-h6-lineheight: initial;
+    --mud-typography-h6-letterspacing: initial;
+    --mud-typography-h6-text-transform: initial;
+    --mud-typography-subtitle1-family: initial;
+    --mud-typography-subtitle1-size: initial;
+    --mud-typography-subtitle1-weight: initial;
+    --mud-typography-subtitle1-lineheight: initial;
+    --mud-typography-subtitle1-letterspacing: initial;
+    --mud-typography-subtitle1-text-transform: initial;
+    --mud-typography-subtitle2-family: initial;
+    --mud-typography-subtitle2-size: initial;
+    --mud-typography-subtitle2-weight: initial;
+    --mud-typography-subtitle2-lineheight: initial;
+    --mud-typography-subtitle2-letterspacing: initial;
+    --mud-typography-subtitle2-text-transform: initial;
+    --mud-typography-body1-family: initial;
+    --mud-typography-body1-size: initial;
+    --mud-typography-body1-weight: initial;
+    --mud-typography-body1-lineheight: initial;
+    --mud-typography-body1-letterspacing: initial;
+    --mud-typography-body1-text-transform: initial;
+    --mud-typography-body2-family: initial;
+    --mud-typography-body2-size: initial;
+    --mud-typography-body2-weight: initial;
+    --mud-typography-body2-lineheight: initial;
+    --mud-typography-body2-letterspacing: initial;
+    --mud-typography-body2-text-transform: initial;
+    --mud-typography-button-family: initial;
+    --mud-typography-button-size: initial;
+    --mud-typography-button-weight: initial;
+    --mud-typography-button-lineheight: initial;
+    --mud-typography-button-letterspacing: initial;
+    --mud-typography-button-text-transform: initial;
+    --mud-typography-caption-family: initial;
+    --mud-typography-caption-size: initial;
+    --mud-typography-caption-weight: initial;
+    --mud-typography-caption-lineheight: initial;
+    --mud-typography-caption-letterspacing: initial;
+    --mud-typography-caption-text-transform: initial;
+    --mud-typography-overline-family: initial;
+    --mud-typography-overline-size: initial;
+    --mud-typography-overline-weight: initial;
+    --mud-typography-overline-lineheight: initial;
+    --mud-typography-overline-letterspacing: initial;
+    --mud-typography-overline-text-transform: initial;
+    --mud-zindex-drawer: initial;
+    --mud-zindex-appbar: initial;
+    --mud-zindex-dialog: initial;
+    --mud-zindex-popover: initial;
+    --mud-zindex-snackbar: initial;
+    --mud-zindex-tooltip: initial;
+}
+
 html, body {
     font-family: NovaRegular;
     font-size: 16px;
@@ -60,6 +268,7 @@ th {
     font-family: F1Bold;
 }
 
+/* shared */
 .flag-xs {
     font-size: 1em;
 }
@@ -74,41 +283,6 @@ th {
 
 .flag-lg {
     font-size: 4em;
-}
-
-.tyre {
-    display: inline-block;
-    height: 30px;
-    width: 30px;
-    padding: 3px 0px;
-    background-color: black;
-    color: white;
-    border: 3px solid red;
-    border-radius: 50%;
-    text-align: center;
-    font-family: NovaBlack;
-}
-
-.tyre-col {
-    width: 105px;
-    padding: 4px;
-}
-
-.number-col, .number-col-lg, .number-col-xl {
-    padding: 10px !important;
-    text-align: center !important;
-}
-
-.number-col {
-    width: 30px;
-}
-
-.number-col-lg {
-    width: 50px;
-}
-
-.number-col-xl {
-    width: 75px;
 }
 
 .overflow-hider {
@@ -126,41 +300,8 @@ th {
     overflow-y: hidden !important;
 }
 
-.field-xs, .field-xs > * {
-    width: 75px;
-}
-
-.field-sm, .field-sm > * {
-    width: 200px;
-}
-
-.field-md, .field-md > * {
-    width: 400px;
-}
-
-.field-lg, .field-lg > * {
-    width: 800px;
-}
-
-.btn-sm {
-    width: 75px;
-}
-
-.btn-md {
-    width: 125px;
-}
-
 .pb-20 {
     padding-bottom: 100px !important;
-}
-
-.accent-cell {
-    width: 5px !important;
-    padding: 0px !important;
-}
-
-.text-center {
-    text-align: center !important;
 }
 
 .flex-stretch-items > * {
@@ -169,6 +310,23 @@ th {
 
 .flex-stretch-equal > * {
     flex: 1 1 0;
+}
+
+.text-center {
+    text-align: center !important;
+}
+
+.tyre {
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    padding: 3px 0px;
+    background-color: black;
+    color: white;
+    border: 3px solid red;
+    border-radius: 50%;
+    text-align: center;
+    font-family: NovaBlack;
 }
 
 /* colours */
@@ -188,7 +346,15 @@ th {
     background-color: rgba(230, 230, 230, 0.25) !important;
 }
 
-/* buttons */
+/* controls */
+.btn-sm {
+    width: 75px;
+}
+
+.btn-md {
+    width: 125px;
+}
+
 .inline-edit-toggle-btn,
 .inline-edit-toggle-btn.active,
 .inline-edit-toggle-btn:not(.active) {
@@ -242,17 +408,45 @@ th {
     font-family: var(--mud-typography-subtitle2-family);
 }
 
-/* tables */
-.result-cell {
-    border: 0.5px solid black !important;
-    color: black !important;
-    width: 50px !important;
-    text-align: center !important;
-    padding: 0px !important;
+/* inputs */
+.field-xs, .field-xs > * {
+    width: 75px;
 }
 
-.postrace-table-group-header {
+.field-sm, .field-sm > * {
+    width: 200px;
+}
 
+.field-md, .field-md > * {
+    width: 400px;
+}
+
+.field-lg, .field-lg > * {
+    width: 800px;
+}
+
+.past-setup-dropdown-item {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+    .past-setup-dropdown-item > .setup-block {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        gap: 12px;
+        padding: 4px 8px;
+        border: 1px solid var(--mud-palette-primary);
+        border-radius: 8px;
+        width: inherit;
+    }
+
+/* tables */
+.accent-cell {
+    width: 5px !important;
+    padding: 0px !important;
 }
 
 .battle-stat-cell-wrapper {
@@ -268,6 +462,36 @@ th {
         background-color: antiquewhite;
         padding: 8px 1px;
     }
+
+.number-col, .number-col-lg, .number-col-xl {
+    padding: 10px !important;
+    text-align: center !important;
+}
+
+.number-col {
+    width: 30px;
+}
+
+.number-col-lg {
+    width: 50px;
+}
+
+.number-col-xl {
+    width: 75px;
+}
+
+.result-cell {
+    border: 0.5px solid black !important;
+    color: black !important;
+    width: 50px !important;
+    text-align: center !important;
+    padding: 0px !important;
+}
+
+.tyre-col {
+    width: 105px;
+    padding: 4px;
+}
 
 /* dialogs */
 .additional-dialog-controls {
@@ -301,16 +525,16 @@ th {
     }
 
 /* extensions on mudblazor css variables */
-.dialog-shadow {
-    box-shadow: var(--mud-palette-secondary) 0 0 2em !important;
-}
-
 .collapse table {
     border-collapse: collapse;
 }
 
 .dense-field > .mud-input-control-input-container > div.mud-input.mud-input-text {
     margin-top: 0px !important;
+}
+
+.dialog-shadow {
+    box-shadow: var(--mud-palette-secondary) 0 0 2em !important;
 }
 
 .extra-dense .mud-table-cell {
@@ -321,7 +545,6 @@ th {
 .hide-sort-icons .column-options {
     display: none !important;
 }
-
 
 /* default blazor css elements */
 #blazor-error-ui {
@@ -354,12 +577,11 @@ th {
     }
 
 /* special stuff */
+.cubic-repeat-bg {
+    background: url('../images/mmmotif.svg') repeat;
+}
 
 .header-special {
     font-family: ShogunsClan !important;
     font-size: 3em;
-}
-
-.cubic-repeat-bg {
-    background: url('../images/mmmotif.svg') repeat;
 }
